mudanças no head e no body

--- a/aula01/meprimeirocodigo.html
+++ b/aula01/meprimeirocodigo.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>Matheus Fidelis De Sousa
     <meta charset='iso-8858-1'>
      <title>Meu primeiro código</title>
    </head>
 <body>
-    <p>Olá mundo</p>
+    <p>Olá meu nome é Matheus Fidelis De Sousa, tenho 17 anos, e estou cursando o terceiro ano do ensino médio, gosto muito de mexer no computador, por isso entrei no curso, espero com ele me torar um programador e trabalhar nessa área.</p>
 </body>
 </html>
